--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+/*  */
 body {
-  background: #e27442;
+  background: #eabaec;
 }
 .todo-container {
   color: white;
@@ -14,7 +15,7 @@ body {
   padding: 20px;
   width: 600px;
   transform: translate(-50%, -50%);
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.4);
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -42,7 +43,7 @@ body {
   cursor: pointer;
   padding: 5px;
   font-family: "Candal", sans-serif;
-  background-color: rgb(51, 212, 100);
+  background-color: rgb(0, 0, 0);
 }
 .todo-container ul {
   list-style: none;
@@ -75,7 +76,7 @@ body {
   cursor: pointer;
   padding: 5px;
   font-family: "Candal", sans-serif;
-  background-color: rgb(51, 212, 100);
+  background-color: rgb(0, 0, 0);
 }
 .todo-list-item .cancel {
   color: white;
@@ -85,20 +86,20 @@ body {
   cursor: pointer;
   padding: 5px;
   font-family: "Candal", sans-serif;
-  background-color: rgb(223, 43, 43);
+  background-color: rgb(0, 0, 0);
   margin-left: 5px;
 }
 .todo-list-item div {
   flex-grow: 2;
 }
 .todo-list-item .edit {
-  color: rgb(143, 233, 58);
+  color: rgb(0, 0, 0);
   margin-right: 10px;
   cursor: pointer;
   text-decoration: none;
 }
 .todo-list-item .remove {
-  color: rgb(243, 96, 96);
+  color: rgb(0, 0, 0);
   margin-right: 5px;
   cursor: pointer;
   text-decoration: none;
